--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <body id="home">
     <!-- navigation bar -->
     <nav class="" role="navigation">
-        <div class="nav-wrapper black lighten-1"><a id="logo-container" href="#" class="brand-logo"><i class="large material-icons">code</i>Gabe Consulting</a>
+        <div class="nav-wrapper black lighten-1"><a id="logo-container" href="#" class="brand-logo"><i class="large material-icons">code</i>Zach Lichtenberg's
+        Consulting</a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#service">Service</a></li>
@@ -53,15 +54,15 @@
     <section class="slider">
         <ul class="slides">
             <li>
-                <img src="Technology-Consultant01.jpg"> <!-- random image -->
+                <img src="zachconsulting.jpeg"> <!-- random image -->
                 <div class="caption center-align">
-                    <h1>Gabe Consulting!</h1>
+                    <h1>Zach Consulting!</h1>
                     <h5 class="light grey-text text-lighten-3">World Class Experts!</h5>
                     <a class="waves-effect waves-light btn btn-large white black-text">Learn More</a>
                 </div>
             </li>
             <li>
-                <img src="Technology-Consultant02.jpg"> <!-- random image -->
+                <img src="zachconsulting2.jpeg"> <!-- random image -->
                 <div class="caption left-align">
                     <h1>Left Aligned Caption</h1>
                     <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -70,7 +71,7 @@
                 </div>
             </li>
             <li>
-                <img src="Technology-Consultant03.jpg"> <!-- random image -->
+                <img src="zachconsulting3.jpeg"> <!-- random image -->
                 <div class="caption right-align">
                     <h1>Right Aligned Caption</h1>
                     <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -195,17 +196,17 @@
            <h4 class="center">About Me</h4></div>
     <div class="container">
         <div class="row">
-        <img class = "responsive-img" src="Headshot.jpg" width="15%" height="150px" style="float: left; margin: 5px 15px">
-    <p>Gabe Lee currently holds the Armstrong Chair in Emerging Technology and Innovation at Miami University. He holds a B.A and an M.B.A. degrees from Korea University, Seoul, Korea and a Ph.D degree from University of Colorado at Boulder. His research focuses on web design and usability, technology acceptance, and information security. His research efforts were recognized as the top 2% of the Worlds Researchers by Stanford University in 2021. His research has appeared in Communications of the ACM, Decision Support Systems, European Journal of Information Systems, Information & Management, Journal of the Association for Information Systems (JAIS), Journal of Management Information Systems(JMIS), MIS Quarterly, and in other journals. He serves as a track chair of the Interface Design, Evaluation, and Impact (IDEI) at the Americas Conference on Information Systems (AMCIS), and a chair for SIGHCI. He also served as a special issue editor of the International Journal of Human Computer Studies and the Database for Advances in Information Systems. Prior to joining Miami University, Dr. Lee was on the faculty at University of Kansas in Lawrence, KS, and at University of Northern Iowa in Cedar Falls, IA. </p>
+        <img class = "responsive-img" src="Zach%20Lichtenberg%20Headshot.jpeg"width="15%" height="150px" style="float: left; margin: 5px 15px">
+    <p>Zach Lichtenberg is a Senior Finance Major at Miami University. He is looking for a career in finance in the future to begin his consulting career. </p>
         </div>    
     <div class="row">        
     <div class="col l6 m6 s12"> 
-    <p><i class="material-icons" style="float: left">home </i>&nbsp;&nbsp;&nbsp;800 E. High Street, Oxford, OH 45056</p> 
+    <p><i class="material-icons" style="float: left">home </i>&nbsp;&nbsp;&nbsp;102 Oberlin Court, Oxford, OH 45056</p> 
     <p><i class="material-icons" style="float: left">work</i>&nbsp;&nbsp;&nbsp;Work: Miami University</p>
     </div>
     <div class="col l6 m6 s12"> 
-    <p><i class="material-icons" style="float: left">phone</i>&nbsp;&nbsp;&nbsp;Phone: 513-529-2164</p>
-    <p><i class="material-icons" style="float: left">email</i>&nbsp;&nbsp;&nbsp;Email: gabelee@miamioh.edu</p>
+    <p><i class="material-icons" style="float: left">phone</i>&nbsp;&nbsp;&nbsp;Phone: 513-882-2315</p>
+    <p><i class="material-icons" style="float: left">email</i>&nbsp;&nbsp;&nbsp;Email: lichtezw@miamioh.edu</p>
         </div>
     </div> </div>   
        </section>    
@@ -225,7 +226,7 @@
                     <a href="#" class="white-text">
                         <i class="fab fa-twitter fa-2x"></i>
                     </a>
-                    <a href="#" class="white-text">
+                    <a href="https://www.linkedin.com/in/zacharywlichtenberg/" class="white-text">
                         <i class="fab fa-linkedin fa-2x"></i>
                     </a>
                     <a href="#" class="white-text">
@@ -245,7 +246,7 @@
        <div class="row">
            <h4 class="center">Contact Us</h4></div>
             <div class="row">
-                <form action="https://formsubmit.co/gabelee@miamioh.edu" method="POST" class="col s12">
+                <form action="https://formsubmit.co/lichtezw@miamioh.edu" method="POST" class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
                             <i class="material-icons prefix">account_circle</i>
